# rival

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: tictactoe.rs
examples/: tictactoe.rs
src/: cache.rs  docs.rs  error.rs  evaluate.rs  game.rs  lib.rs  moves.rs  perform.rs  play.rs  rival.rs  search.rs
src/games/: mod.rs  tictactoe.rs
src/search/: cached_game.rs  game.rs  max_n.rs  mod.rs  negamax.rs
tests/: tictactoe.rs
