[package]
name = "adversary"
version = "0.1.0"
authors = ["Rick van der Wal <rickvanderwalvis@gmail.com>"]
edition = "2018"
description = "A framework for creating a computer player for two-player games"
readme = "README.md"
repository = "https://github.com/Tortoaster/adversary"
license = "MIT OR Apache-2.0"
keywords = ["adversarial", "search", "minimax", "negamax"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
